subdir('grammar')

##############################
# can::utils::crop_cast test #
##############################

test('can/utils/crop_cast',
    executable('test_crop_cast', ['crop_cast.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        cpp_args: cpp_flags,
    )
)