############################################
# can::utils::grammar::floating_point test #
############################################

test('can/utils/grammar/floating_point',
    executable('test_floating_point', ['floating_point.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        cpp_args: cpp_flags,
    )
)