##########################################################
# can::database::dbc::grammar::attribute_definition test #
##########################################################

test('can/database/dbc/grammar/attribute_definition',
    executable('test_attribute_definition', ['attribute_definition.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

##################################################################
# can::database::dbc::grammar::attribute_definition_default test #
##################################################################

test('can/database/dbc/grammar/attribute_definition_default',
    executable('test_attribute_definition_default', ['attribute_definition_default.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

###############################################
# can::database::dbc::grammar::attribute test #
###############################################

test('can/database/dbc/grammar/attribute',
    executable('test_attribute', ['attribute.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)