##########################################################
# can::database::dbc::grammar::attribute_definition test #
##########################################################

test('can/database/dbc/grammar/attribute_definition',
    executable('test_attribute_definition', ['attribute_definition.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

##################################################################
# can::database::dbc::grammar::attribute_definition_default test #
##################################################################

test('can/database/dbc/grammar/attribute_definition_default',
    executable('test_attribute_definition_default', ['attribute_definition_default.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

###############################################
# can::database::dbc::grammar::attribute test #
###############################################

test('can/database/dbc/grammar/attribute',
    executable('test_attribute', ['attribute.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

#################################################
# can::database::dbc::grammar::description test #
#################################################

test('can/database/dbc/grammar/description',
    executable('test_description', ['description.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

########################################
# can::database::dbc::grammar::message #
########################################

test('can/database/dbc/grammar/message',
    executable('test_message', ['message.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

###########################################
# can::database::dbc::grammar::nodes test #
###########################################

test('can/database/dbc/grammar/nodes',
    executable('test_nodes', ['nodes.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

##################################################
# can::database::dbc::grammar::requirements test #
##################################################

test('can/database/dbc/grammar/requirements',
    executable('test_requirements', ['requirements.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

#######################################
# can::database::dbc::grammar::signal #
#######################################

test('can/database/dbc/grammar/signal',
    executable('test_signal', ['signal.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

###########################################
# can::database::dbc::grammar::speed test #
###########################################

test('can/database/dbc/grammar/speed',
    executable('test_speed', ['speed.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

#######################################################
# can::database::dbc::grammar::value_definitions test #
#######################################################

test('can/database/dbc/grammar/value_definitions',
    executable('test_value_definitions', ['value_definitions.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

############################################################
# can::database::dbc::grammar::value_table_definition test #
############################################################

test('can/database/dbc/grammar/value_table_definition',
    executable('test_value_table_definition', ['value_table_definition.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)

#############################################
# can::database::dbc::grammar::version test #
#############################################

test('can/database/dbc/grammar/version',
    executable('test_version', ['version.cpp'],
        include_directories: can_includes,
        dependencies: can_deps,
        link_with: can_static,
        cpp_args: cpp_flags,
    )
)